@@ -4,6 +4,8 @@ lldpd (1.0.5)
     + On Linux, only register protocol handler for LLDP when only LLDP
       is enabled.
     + Stricter on LLDP incoming frames validation.
+  * Fix:
+    + Don't clear chassis TLV on shutdown LLDPDU.
 
 lldpd (1.0.4)
   * Changes:
